force-app/main/default/objects/SD_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <inlineHelpText>วันที่ปิด</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closure_Status__c</fullName>
        <inlineHelpText>สถานะ</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyId__c</fullName>
        <formula>SD_Sub_Area__r.SD_Company__r.Id</formula>
        <label>CompanyId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>SD_Sub_Area__r.SD_Company__r.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Entered_Month__c</fullName>
        <formula>MONTH(Date_Entered__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Entered (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Entered_Year__c</fullName>
        <formula>TEXT(YEAR(Date_Entered__c))</formula>
        <label>Date Entered (Year)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Entered__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>วันที่</inlineHelpText>
        <label>Date Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>รายละเอียด</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Improved_By__c</fullName>
        <label>Improved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Improvement__c</fullName>
        <label>Owner Improvement</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation (คำแนะนำ)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SD_Area__c</fullName>
        <inlineHelpText>พื้นที่</inlineHelpText>
        <label>Area</label>
        <referenceTo>SD_Area__c</referenceTo>
        <relationshipName>Audit</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SD_HOX_Element__c</fullName>
        <label>HOX Element</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>กรุณาเลือก HOX Element ที่ Active อยู่เท่านั้น</errorMessage>
            <filterItems>
                <field>SD_HOX_Element__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>จะโชว์เฉพาะ HOX Element ที่ Active อยู่เท่านั้น</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SD_HOX_Element__c</referenceTo>
        <relationshipName>Audit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SD_PSM__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PSM</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>กรุณาเลือก PSM ที่อยู่ภายใต้ HOX Element นี้เท่านั้น</errorMessage>
            <filterItems>
                <field>SD_PSM__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>SD_PSM__c.SD_HOX_Element__c</field>
                <operation>equals</operation>
                <valueField>$Source.SD_HOX_Element__c</valueField>
            </filterItems>
            <infoMessage>จะโชว์ PSM ที่อยู่ภายใต้ HOX Element นี้เท่านั้น</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SD_PSM__c</referenceTo>
        <relationshipName>Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_Sub_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>พื้นที่ย่อย</inlineHelpText>
        <label>Sub Area</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>กรุณาเลือก Sub Area ที่อยู๋ภายใต้ Area นี้เท่านั้น</errorMessage>
            <filterItems>
                <field>$Source.SD_Area__c</field>
                <operation>equals</operation>
                <valueField>SD_Sub_Area__c.SD_Area__c</valueField>
            </filterItems>
            <infoMessage>ถ้าไม่มี Sub Area ขึ้นให้ทำการพิมพ์ 2 ตัวอักษรขึ้นไปเพื่อทำการ Search</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SD_Sub_Area__c</referenceTo>
        <relationshipName>Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <inlineHelpText>หน่วยกลั่น/หน่วยผลิต</inlineHelpText>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <label>Verified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verifier_Comment__c</fullName>
        <label>Verifier Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Audit Fill in</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>